tests/baselines/reference/moduleImport.errors.txt
moduleImport.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleImport.ts(1,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleImport.ts(1,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleImport.ts(2,17): error TS2694: Namespace 'X' has no exported member 'Y'.
moduleImport.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== moduleImport.ts (5 errors) ====
    module A.B.C {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	import XYZ = X.Y.Z;
    	               ~
!!! error TS2694: Namespace 'X' has no exported member 'Y'.
    	export function ping(x: number) {
    		if (x>0) XYZ.pong (x-1);
    	}
    }
    
    module X {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	import ABC = A.B.C;
    	export function pong(x: number) {
    		if (x > 0) ABC.ping(x-1);
    	}
    }